add api documentation for load medications and get loaded medications
